--- a/index.html
+++ b/index.html
@@ -64,22 +64,20 @@
   
   <section id="easy">
     <div class="container">
-      <div>
+      <div >
         <h2 class="easy-title">It's easy as 1, 2, 3</h2>
         <p class="easy-text">Clerksy can help use your unique business needs. Here's how:</p>
       </div>
       
       <div class="easy">
-        <div>
-          <p>Fill out a form and tell us what you're looking for:</p>
-          <h3>5 minutes</h3>
+        <div class="form-text">
+          <p>Fill out a form and tell us what you're looking for:<br><span>5 minutes</span></p>
         </div>
-        <img src="img/Group.svg" alt="logo">
-        <div>
-          <p>Time it will take a Clerksy rep to follow up:</p>
-          <h3>24 hours</h3>
+        <div class="follow-up">
+          <p>Time it will take a Clerksy rep to follow up: <br><span class="follow-up-text">24 hours</span></p>
+
+
         </div>
-        <img src="img/Group.svg" alt="logo">
         <div>
           <img src="img/Frame (1).png" alt="site-image">
         </div>
@@ -130,14 +128,27 @@
   <section id="date">
     <div class="container">
       <div class="date">
-        <div>
-          <h2 class="date-title">Stay up to date!</h2>
-          <p class="date-text">Sign up for the latest Clerksy news.</p>
+        <div class="date-item">
+          <div>
+            <h2 class="date-title">Stay up to date!</h2>
+          </div>
+          <div>
+            <p class="date-text">Sign up for the latest Clerksy news.</p>
+          </div>
         </div>
-        <div>
-          <a href="#" class="sign">Sign Up</a>
-          <p class="sign-info">By submitting your email you agree to receive updates about Clerksy. You can <br> unsubscribe at any time. View our full</p>
-      </div>
+
+        <div class="date-item">
+
+          <div class="date-sign">
+            <a href="#" class="sign">Sign Up</a>
+          </div>
+
+
+            <div>
+            <p class="sign-info">By submitting your email you agree to receive updates about Clerksy. You can unsubscribe at any time. View our full <span>Privacy Policy</span></p>
+        </div>
+        </div>
+
 
     </div>
   </section>
